Fixed too large margin of article__title

--- a/app/src/sass/templates/_article.sass
+++ b/app/src/sass/templates/_article.sass
@@ -6,7 +6,6 @@
     @extend %flex
     flex-direction: column
   &__title
-    margin-bottom: 40px
     text-align: center
     text-transform: uppercase
     font:
@@ -20,6 +19,9 @@
       margin:
         bottom: 50px
         top: 60px
+    &_mbottom
+      margin:
+        bottom: 50px
   &__image
     width: 100%
     height: 450px
